frontend/modules/profiles/layout/css/profiles.css
/* Dropdown */

.hidden { display: none; }

#profileDropDown {
	position: absolute;
	top: 150px;
	right: 220px;
	z-index: 50;
	padding: 0;
}

	#profileDropDown li {
		position: relative;
	}

	#profileDropDown ul {
		position: absolute;
		right: 0;
		top: 40px;
	}

		#profileDropDown #ddProfiles {
			z-index: 3000;
			padding: 0;
			border-color: #CCC #BABABA #CCC #BABABA;
			background: #FFF;
			/* @inc .boxShadow */
			-moz-box-shadow: 0 2px 6px #AAA;
			-webkit-box-shadow: 0 2px 6px #AAA;
			box-shadow: 0 2px 6px #AAA;
		}

		#profileDropDown #ddProfiles li {
			float: none;
			border: none;
			background: #FFF;
			margin: 0;
			line-height: 24px;
			border-bottom: 1px solid #DDD;
			padding: 10px;
			zoom: 1;
		}

			#profileDropDown #ddProfiles li a {
				zoom: 1;
				display: block;
				border: none !important;
				float: none;
			}

		#profileDropDown #ddProfiles .lastChild {
			border: none;
		}

		#profileDropDown .arrow {
			font-size: 14px;
			font-family: Courier;
		}

			#profileDropDown a:link,
			#profileDropDown a:visited {
				font-weight: 700;
				font-size: 13px;
				color: #2081BB;
			}

			#profileDropDown a:hover,
			#profileDropDown a:active,
			#profileDropDown a:focus {
				color: #EF4D03;
			}

			#profileDropDown .nickname,
			#profileDropDown .login {
				float: left;
				padding: 8px;
				line-height: 22px;
			}

			#profileDropDown .arrow {
				display: block;
				float: left;
				padding: 8px;
				line-height: 23px;
				height: 22px;
				overflow: hidden;
			}

			#profileDropDown .avatar {
				float: left;
				line-height: 42px;
				overflow: hidden;
			}

				#profileDropDown .avatar img {
					width: 39px;
					height: 39px;
				}

			#profileDropDown:after {
				/* @inc .clearfix */ content: "."; display: block; height: 0; clear: both; visibility: hidden;
			}

		#profileDropDown ul ul li:last-child {
			border: none;
		}

/* other profiles styles */
#profile .comments {
	padding-left: 48px;
}

.messages .imageHolder,
.comments .imageHolder {
	float: left;
	padding: 0 12px 0 0;
	width: 64px;
	height: 64px;
}

.comments .imageHolder {
	width: 48px;
	height: 48px;
}

.messages .messageContent,
.comments .messageContent {
	float: left;
}

.messageHolder, .thread {
	border-bottom: 1px solid #D8D8D8;
	margin-bottom: 10px;
	margin-right: 15px;
	display: block;
}

.messageHolder:last-child, .thread:last-child {
	border: none;
	margin-bottom: 0;
}

.unread a,
.unread a:link,
.unread a:visited {
	color: #001A77;
}

.unread a:hover, .unread a:active, .unread a:focus {
	color: #EF4D03;
}

.ajaxLink span {
	cursor: pointer;
	border-bottom: 1px solid #abdaee;
	color: #018fcc;
}

.ajaxLink span:hover {
	border-color: #ef4d03;
	color: #ef4d03;
}

#newMessageButton {
	float: right;
	position: relative;
	right: 15px;
	top: -40px;
}

.alphabet {
	padding-bottom: 12px;
}

	.alphabet li {
		display: inline;
		padding-right: 10px;
	}

.profilePreview {
	float: left;
	padding-bottom: 12px;
}

#overview .profilePreview {
	width: 30%;
	padding-right: 3%;
}

	.profilePreview .avatar {
		float: left;
		padding-right: 10px;
	}

	#profile .profilePreview .avatar {
		padding-top: 7px;
	}

	#activities .date {
		color: #444;
	}

.deleteButton,
.deleteCommentButton,
.report {
	float: right;
	cursor: pointer;
	display: none;
}

.deleteButton,
.deleteCommentButton {
	height: 16px;
	width: 16px;
	background-image: url('../images/delete.gif');
}

.activity:hover > .deleteButton,
.messageHolder:hover > .deleteCommentButton,
.messageHolder:hover > .report {
	display: block;
}

.facebookLoginWrapper,
.showOnFacebookLogout {
	float: left;
	margin-right: 40px;
}

